--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-    apiKey: "AIzaSyB87RcxV2EfE6Bl1L1hDtwnygPKv6oUrnQ",
-    authDomain: "covid-resources-94d93.firebaseapp.com",
-    databaseURL: "https://covid-resources-94d93-default-rtdb.firebaseio.com",
-    projectId: "covid-resources-94d93",
-    storageBucket: "covid-resources-94d93.appspot.com",
-    messagingSenderId: "105314665680",
-    appId: "1:105314665680:web:d0fd2ffe2d9ad214d84ad5"
+    REACT_APP_API_KEY = "AIzaSyB87RcxV2EfE6Bl1L1hDtwnygPKv6oUrnQ"
+    REACT_APP_AUTH_DOMAIN = "covid-resources-94d93.firebaseapp.com"
+    REACT_APP_DB_URL = "https://covid-resources-94d93-default-rtdb.firebaseio.com"
+    REACT_APP_PROJECT_ID = "covid-resources-94d93"
+    REACT_APP_STORAGE_BUCKET = "covid-resources-94d93.appspot.com"
+    REACT_APP_MESSAGE_SENDER_ID = "105314665680"
+    REACT_APP_APP_ID = "1:105314665680:web:d0fd2ffe2d9ad214d84ad5"
     SKIP_PREFLIGHT_CHECK=true
